Fixes #27 changes font-size on past meals to 0 to fix whitespace bug

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -237,12 +237,12 @@ body.meals .meal {
   position: relative;
   margin-bottom: 5px;
   padding: 0 1px;
+  font-size: 0;
   background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.25s;
   .photoFrame {
     display: inline-block;
     width: 20%;
-    margin: 0 -2px;
     img {
       width: 100%;
       vertical-align: middle;
@@ -391,7 +391,6 @@ body.editperson .editimg img {
   body.meals .meal {
     .photoFrame {
       width: 10%;
-      margin: 0 -2px;
     }
   }
   .form-group {
